# zombicus

./: .gitignore  README.md  br  stack.yaml  zombicus.cabal
src/: Character.hs  HomoZombicus.hs  Main.hs  Records.hs  ReflexHost.hs  Rendering.hs  SimpleHomoSapiens.hs  Trajectory.hs  World.hs
