name:                zombicus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/zombicus#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable zombicus
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       ReflexHost
  default-language:    Haskell2010
  other-modules:       Records
                     , Rendering
                     , SimpleHomoSapiens
                     , HomoZombicus
                     , World
  build-depends:       base >= 4.7 && < 5
                     , reflex
                     , sdl2
                     , sdl2-image
                     , sdl2-gfx
                     , dependent-sum
                     , mtl
                     , random
                     , lens >= 4.15.3
                     , containers
                     , vector
